--- a/source/app/templates/search/index.html.twig
+++ b/source/app/templates/search/index.html.twig
@@ -1,35 +1,70 @@
 {% extends 'layout/base.html.twig' %}
 
+{% block stylesheets %}
+    <style>
+    .col-form-label {
+        padding-top: 0px !important;;
+    }
+    </style>
+{% endblock %}
+
 {% block body %}
     <div class="container">
         <h3><i class="fas fa-fw fa-search"></i> Documenten</h3>
 
-        {{ form(form) }}
+        {{ form_start(form) }}
+
+        <div class="my-custom-class-for-errors">
+            {{ form_errors(form) }}
+        </div>
+
+        <div class="row">
+            <div class="col">
+                {{ form_row(form.query) }}
+            </div>
+            <div class="col">
+                {{ form_row(form.sender) }}
+            </div>
+            <div class="col">
+                {{ form_row(form.recipient) }}
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                {{ form_row(form.created_min) }}
+            </div>
+            <div class="col">
+                {{ form_row(form.created_max) }}
+            </div>
+            <div class="col">
+                {{ form_row(form.sort) }}
+            </div>
+        </div>
+
+        {{ form_end(form) }}
+
+        <hr />
 
         {% if result is not empty %}
-            <h4>Gevonden Documenten</h4>
+            <h4>Resultaten</h4>
 
             <table class="table table-hover">
                 <thead>
                 <tr>
+                    <th scope="col"></th>
                     <th scope="col">Datum</th>
-                    <th scope="col">Onderwerp</th>
-                    <th scope="col">Afzender</th>
-                    <th scope="col">Geadresseerde</th>
-                    <th scope="col">Opties</th>
+                    <th scope="col">Document</th>
                 </tr>
                 </thead>
                 <tbody>
                 {% for hit in result.hits %}
                     <tr>
-                        <td>{{ hit.created|date('Y-m-d') }}</td>
-                        <td>{{ hit.subject }}</td>
-                        <td>{{ hit.sender }}</td>
-                        <td>{{ hit.recipient }}</td>
                         <td>
                             <a target="_blank" href="{{ path('view', {id: hit.id, r: 'now'|date('YmdHis')}) }}"><i class="fas fa-fw fa-eye"></i></a>
                             <a target="_blank" href="{{ path('download', {id: hit.id, r: 'now'|date('YmdHis')}) }}"><i class="fas fa-fw fa-download"></i></a>
                         </td>
+                        <td>{{ hit.created|date('Y-m-d') }}</td>
+                        <td>{{ hit.sender }} - {{ hit.subject }} {% if hit.recipient is not empty %}({{ hit.recipient }}){% endif %}</td>
                     </tr>
                 {% endfor %}
                 </tbody>
