Default dates, update layout

--- a/source/app/templates/layout/base.html.twig
+++ b/source/app/templates/layout/base.html.twig
@@ -10,6 +10,14 @@
           crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
     <title>{% block title %}DMS Search{% endblock %}</title>
+    <style>
+        body {
+            padding-top:10px;
+        }
+        .col-form-label {
+            padding-top: 0px !important;;
+        }
+    </style>
     {% block stylesheets %}{% endblock %}
 </head>
 <body>
