Fix mobile layout

--- a/source/app/templates/search/index.html.twig
+++ b/source/app/templates/search/index.html.twig
@@ -37,9 +37,10 @@
         </div>
 
         <div class="row">
-            <div class="col col-1">
+            <div class="col">
                 {{ form_row(form.submit) }}
             </div>
+            <div class="col-sm"></div>
             <div class="col">
                 <div class="form-group">
                     <a class="btn btn-link" href="{{ path('home') }}" role="button">Reset</a>
